--- a/VolunteerSystemFrontEnd/uni.scss
+++ b/VolunteerSystemFrontEnd/uni.scss
@@ -13,7 +13,8 @@
  */
 
 /* 颜色变量 */
-
+/* 配置uview-plus uni.scss */
+@import '@/node_modules/uview-plus/theme.scss';
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
